--- a/airflow/airflow-deploy.yml
+++ b/airflow/airflow-deploy.yml
@@ -1,15 +1,9 @@
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: airflow
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow-web
-  namespace: airflow
+  namespace: default
   labels:
     app: airflow
 spec:
@@ -51,7 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: airflow-web-service
-  namespace: airflow
+  namespace: default
   labels:
     app: airflow
 spec:
@@ -68,7 +62,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow-scheduler
-  namespace: airflow
+  namespace: default
   labels:
     app: airflow
 spec:
@@ -96,7 +90,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: airflow-pvc
-  namespace: airflow
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
@@ -109,7 +103,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: airflow-config
-  namespace: airflow
+  namespace: default
 data:
   airflow.cfg: |
     [core]
