--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2  # 도커 이미지 빌드 및 푸시
       with:
-        context: .  # 현재 디렉토리를 컨텍스트로 사용
+        context: ./work/docker  # 현재 디렉토리를 컨텍스트로 사용
         push: true  # 빌드 후 이미지를 푸시
         tags: limjoohan/mlops_project:latest  # 도커 허브 리포지토리 태그
 
