--- a/airflow/airflow-deploy.yml
+++ b/airflow/airflow-deploy.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow-web
-  namespace: default
+  namespace: airflow
   labels:
     app: airflow
 spec:
@@ -45,7 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: airflow-web-service
-  namespace: default
+  namespace: airflow
   labels:
     app: airflow
 spec:
@@ -62,7 +62,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow-scheduler
-  namespace: default
+  namespace: airflow
   labels:
     app: airflow
 spec:
@@ -90,7 +90,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: airflow-pvc
-  namespace: default
+  namespace: airflow
 spec:
   accessModes:
     - ReadWriteOnce
@@ -103,7 +103,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: airflow-config
-  namespace: default
+  namespace: airflow
 data:
   airflow.cfg: |
     [core]
